fix(live-preview): breakpoints and zoom options are now readable when using dark theme

--- a/packages/payload/src/admin/components/views/LivePreview/Toolbar/Controls/index.scss
+++ b/packages/payload/src/admin/components/views/LivePreview/Toolbar/Controls/index.scss
@@ -13,6 +13,10 @@
     &:focus {
       outline: none;
     }
+
+    option {
+      background-color: var(--theme-bg);
+    }
   }
 
   &__device-size {
@@ -39,6 +43,10 @@
 
     &:focus {
       outline: none;
+    }
+
+    option {
+      background-color: var(--theme-bg);
     }
   }
 
